# SATcore-Designer

./: .gitignore  LICENSE  README.md  base_problem.xml  base_problem_variant_dist17.xml  chip_design.ipynb  example.xml  example2.xml  pyproject.toml
earlier files/: test.ipynb  z3_tutorial.ipynb
src/: satcore_designer.py
